# ShojiWM

./: Cargo.toml  README.md  flake.nix
docs/: screencast-30fps-xdpw-bug.md
docs/docs/architecture/: wayland.md
docs/docs/configuration/: cursor.md  default-config.md  effects.md  overview.md  window-composition.md
docs/docs/development/: _category_.json  contributing.md  developing.md
docs/docs/getting-started/: installation.md
docs/i18n/ja/docusaurus-plugin-content-docs/: current.json
docs/i18n/ja/docusaurus-plugin-content-docs/current/: intro.md
docs/i18n/ja/docusaurus-plugin-content-docs/current/configuration/: cursor.md  default-config.md  effects.md  overview.md  window-composition.md
docs/i18n/ja/docusaurus-plugin-content-docs/current/development/: contributing.md  developing.md
docs/i18n/ja/docusaurus-plugin-content-docs/current/getting-started/: installation.md
knowledges/: effect-invalidation.md
nix/: nixos-module.nix  package.nix
src/: cursor.rs  input.rs  main.rs  presentation.rs  runtime_process.rs  state.rs
src/backend/: decoration.rs  icon.rs  mod.rs  screencopy_render.rs  tty.rs  winit.rs
src/grabs/: move_grab.rs
src/handlers/: compositor.rs  layer_shell.rs  mod.rs  xdg_shell.rs  xwayland.rs
src/protocols/: screencopy.rs
src/shojiwm/: Cargo.toml
src/shojiwm/src/: activation_environment.rs  config.rs  cursor.rs  drawing.rs  foreign_toplevel.rs  input.rs  install_paths.rs  main.rs  presentation.rs  profiler.rs  runtime_debug.rs  runtime_input.rs  runtime_key_binding.rs  runtime_process.rs  state.rs  wlr_foreign_toplevel.rs  xwayland_satellite.rs
src/shojiwm/src/backend/: backdrop_blur_down.frag  backdrop_blur_up.frag  clipped_surface.rs  decoration.rs  hdr_pipeline.rs  image_copy_capture_render.rs  mod.rs  noise_salt.frag  screencopy_render.rs  shader_effect.rs  snapshot.rs  text.rs  tty.rs  visual.rs  window.rs  winit.rs
src/shojiwm/src/color/: colorimetry.rs  drm_metadata.rs  mod.rs  primaries.rs
src/shojiwm/src/grabs/: move_grab.rs  resize_grab.rs
src/shojiwm/src/handlers/: compositor.rs  layer_shell.rs  mod.rs  xdg_shell.rs  xwayland.rs
src/shojiwm/src/protocols/: color_management.rs  mod.rs  screencopy.rs  tearing_control.rs
src/shojiwm/src/ssd/: bridge.rs  evaluator.rs  integration.rs  mod.rs  perf_stats.rs  window_model.rs
src/ssd/: integration.rs
src/xdg-desktop-portal-shojiwm/: Cargo.toml
src/xdg-desktop-portal-shojiwm/src/: main.rs  picker.rs  pipewire_stream.rs  screencast.rs  sources.rs  toplevel_stream.rs
tools/: decoration-runtime.ts  evaluate-decoration.ts  perf-top-functions.sh
