# !tyml @cargo/Cargo
[package]
name = "shoji_wm"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.11.0"
thiserror = "2.0.12"
smithay = {
    git = "https://github.com/bea4dev/smithay.git",
    rev = "61de4b26a251edab4d857ddfc9b818540eab709f",
    features = ["use_system_lib", "xwayland"]
}
smithay-drm-extras = {
    git = "https://github.com/bea4dev/smithay.git",
    rev = "61de4b26a251edab4d857ddfc9b818540eab709f",
    package = "smithay-drm-extras",
    default-features = false
}
wayland-protocols-wlr = { version = "0.3.12", features = ["server"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bumpalo = { version = "3.20.2", features = ["allocator-api2"] }
hashbrown = { version = "0.15.5", features = ["allocator-api2"] }
input = "0.10.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
xkbcommon = "0.9.0"
xcursor = "0.3.10"
cgmath = "0.18.0"
fontdb = "0.16.2"
fontdue = "0.9.3"
cosmic-text = "0.17.2"
png = "0.17.16"
resvg = "0.45.1"
mimalloc = "0.1.52"
# Direct calloop dep with the `signals` feature so we can listen for SIGUSR1
# from the TS runtime (tsx spawns node as a child, breaking any inherited fd,
# so we use a Linux signal as the wake mechanism instead).
calloop = { version = "0.14.0", features = ["signals"] }
# Used at the very top of main() to block SIGUSR1 process-wide so the signalfd
# source in calloop receives it deterministically (without random threads
# catching it before we can read).
libc = "0.2"
timescope = "0.1.3"

[features]
# Hardened allocator for chasing heap corruption:
# `secure` adds guard pages and encoded free lists so a
# use-after-free write aborts at the faulting site instead of corrupting
# state that detonates later; `debug` adds mimalloc's internal assertions.
# Build with `cargo build --release --features heap-debug` and reproduce.
heap-debug = ["mimalloc/secure", "mimalloc/debug"]
